[package]
name = "stride"
version = "0.1.0"
authors = ["Helinos <helinos67@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
uuid = "0.8.2"
rand = "0.8.4"

[dependencies.serenity]
default-features = false
version = "0.10.9"
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model",
    "framework",
    "cache",
    "standard_framework",
    "voice"
    ]

[dependencies.songbird]
version = "0.2.0"
features = ["builtin-queue", "serenity"]

[dependencies.sqlx]
default-features = false
version = "0.5.7"
features = [ "runtime-tokio-rustls", "sqlite", "macros"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
